--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="This website makes the url short." />
-  <title>React App</title>
+  <title>URL Shortner</title>
 </head>
 
 <body>
